fix: исправить метод LinkedList remove(id) на removeFirst() в IMHM плюс небольшие недочеты